Update navigation title to include 'Iligan' and add initial PHP test file

--- a/www/cars.html
+++ b/www/cars.html
@@ -15,7 +15,7 @@
             <div class="nav-container">
                 <div class="nav-logo">
                     <i class="fas fa-car"></i>
-                    <span>AutoWorld</span>
+                    <span>AutoWorld Iligan</span>
                 </div>
                 <ul class="nav-menu">
                     <li><a href="#home">Home</a></li>
