Add real car images to AutoWorld website
- Replaced placeholder icons with high-quality car images from Unsplash
- Added Toyota Camry Hybrid, Honda CR-V, and Tesla Model 3 review images
- Updated gallery with luxury, sports, electric, and SUV car photos
- Enhanced hero section with stunning car background image
- Improved CSS styling for image hover effects and transitions
- Added lazy loading for better performance
- Made images responsive for mobile devices

--- a/www/cars.html
+++ b/www/cars.html
@@ -46,7 +46,7 @@
             </div>
         </div>
         <div class="hero-image">
-            <i class="fas fa-car-side"></i>
+            <img src="https://images.unsplash.com/photo-1503376780353-7e6692767b70?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="Luxury Sports Car" loading="eager">
         </div>
     </section>
 
@@ -87,7 +87,7 @@
             <div class="reviews-grid">
                 <article class="review-card">
                     <div class="review-image">
-                        <i class="fas fa-car"></i>
+                        <img src="https://images.unsplash.com/photo-1621007947382-bb3c3994e3fb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" alt="2024 Toyota Camry Hybrid" loading="lazy">
                     </div>
                     <div class="review-content">
                         <div class="review-rating">
@@ -113,7 +113,7 @@
 
                 <article class="review-card">
                     <div class="review-image">
-                        <i class="fas fa-car-side"></i>
+                        <img src="https://images.unsplash.com/photo-1606664515524-ed2f786a0bd6?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" alt="2024 Honda CR-V" loading="lazy">
                     </div>
                     <div class="review-content">
                         <div class="review-rating">
@@ -139,7 +139,7 @@
 
                 <article class="review-card">
                     <div class="review-image">
-                        <i class="fas fa-car-alt"></i>
+                        <img src="https://images.unsplash.com/photo-1560958089-b8a1929cea89?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" alt="2024 Tesla Model 3" loading="lazy">
                     </div>
                     <div class="review-content">
                         <div class="review-rating">
@@ -345,7 +345,7 @@
             <div class="gallery-grid">
                 <div class="gallery-item" data-category="luxury">
                     <div class="gallery-card">
-                        <i class="fas fa-car"></i>
+                        <img src="https://images.unsplash.com/photo-1618843479313-40f8afb4b4d8?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" alt="Mercedes S-Class" loading="lazy">
                         <div class="gallery-overlay">
                             <h4>Mercedes S-Class</h4>
                             <p>Ultimate luxury sedan</p>
@@ -354,7 +354,7 @@
                 </div>
                 <div class="gallery-item" data-category="sports">
                     <div class="gallery-card">
-                        <i class="fas fa-car-side"></i>
+                        <img src="https://images.unsplash.com/photo-1544636331-e26879cd4d9b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" alt="Porsche 911" loading="lazy">
                         <div class="gallery-overlay">
                             <h4>Porsche 911</h4>
                             <p>Iconic sports car</p>
@@ -363,7 +363,7 @@
                 </div>
                 <div class="gallery-item" data-category="electric">
                     <div class="gallery-card">
-                        <i class="fas fa-car-alt"></i>
+                        <img src="https://images.unsplash.com/photo-1617788138017-80ad40651399?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" alt="Tesla Model S" loading="lazy">
                         <div class="gallery-overlay">
                             <h4>Tesla Model S</h4>
                             <p>Premium electric vehicle</p>
@@ -372,7 +372,7 @@
                 </div>
                 <div class="gallery-item" data-category="suv">
                     <div class="gallery-card">
-                        <i class="fas fa-truck"></i>
+                        <img src="https://images.unsplash.com/photo-1519641471654-76ce0107ad1b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" alt="Range Rover" loading="lazy">
                         <div class="gallery-overlay">
                             <h4>Range Rover</h4>
                             <p>Luxury SUV</p>
@@ -381,7 +381,7 @@
                 </div>
                 <div class="gallery-item" data-category="sports">
                     <div class="gallery-card">
-                        <i class="fas fa-car-crash"></i>
+                        <img src="https://images.unsplash.com/photo-1492144534655-ae79c964c9d7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" alt="Ferrari F8" loading="lazy">
                         <div class="gallery-overlay">
                             <h4>Ferrari F8</h4>
                             <p>Italian supercar</p>
@@ -390,7 +390,7 @@
                 </div>
                 <div class="gallery-item" data-category="electric">
                     <div class="gallery-card">
-                        <i class="fas fa-charging-station"></i>
+                        <img src="https://images.unsplash.com/photo-1571068316344-75bc76f77890?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" alt="Audi e-tron" loading="lazy">
                         <div class="gallery-overlay">
                             <h4>Audi e-tron</h4>
                             <p>Electric luxury SUV</p>
